--- a/engine/modules/billing/payments/robokassa/info.ini
+++ b/engine/modules/billing/payments/robokassa/info.ini
@@ -1,4 +1,4 @@
-﻿[info]
-version=1.3
+[info]
+version=2.0
 title=Робокасса
-desc=ROBOKASSA — это сервис, позволяющий Продавцам принимать платежи от клиентов с помощью банковских карт, в любой электронной валюте
+desc=ROBOKASSA — это сервис, позволяющий продавцам принимать платежи от клиентов с помощью банковских карт, в любой электронной валюте
