--- a/engine/modules/billing/payments/interkassa/info.ini
+++ b/engine/modules/billing/payments/interkassa/info.ini
@@ -1,4 +1,4 @@
-﻿[info]
+[info]
 version=1.3
 title=Интеркасса
-desc=Универсальный платежный шлюз «Интеркасса» позволяет принимать оплату в интернет-магазине различными видами электронных валют, банковскими картами, и переводами
+desc=Универсальный платежный шлюз «Интеркасса» позволяет принимать оплату в интернет-магазине различными видами электронных валют
