--- a/engine/modules/billing/plugins/paygroups/info.ini
+++ b/engine/modules/billing/plugins/paygroups/info.ini
@@ -1,5 +1,5 @@
 [info]
 author=mr_Evgen
-version=2.0
+version=2.1
 title=Платный переход в группу
-desc=Управление платными переходами пользователей между группами
+desc=Управление плагином платного переходами пользователей между группами
