--- a/engine/modules/billing/plugins/forms/info.ini
+++ b/engine/modules/billing/plugins/forms/info.ini
@@ -1,5 +1,6 @@
 [info]
 author=mr_Evgen
-version=1.0
+link=https://github.com/evgeny-tc/dle-billing-module
+version=1.1
 title=Формы
-desc=Управление формами заказов
+desc=Просмотр собранных данных, добавление новых форм
