--- a/engine/modules/billing/payments/interkassa/info.ini
+++ b/engine/modules/billing/payments/interkassa/info.ini
@@ -1,4 +1,4 @@
 [info]
 version=2.0
 title=Интеркасса
-desc=Универсальный платежный шлюз «Интеркасса» позволяет принимать оплату в интернет-магазине различными видами электронных валют
+desc=Универсальная платежная система, предназначенная для автоматизации приема платежей
