--- a/engine/modules/billing/payments/liqpay/info.ini
+++ b/engine/modules/billing/payments/liqpay/info.ini
@@ -1,4 +1,4 @@
 [info]
 version=2.2
 title=LiqPay UA
-desc=Если Вы ищете единое платежное решение или хотите добавить LIQPAY в качестве дополнительного способа оплаты для Вашего сайта
+desc=Единое платежное решение для вашего бизнеса
