--- a/engine/modules/billing/payments/robokassa/info.ini
+++ b/engine/modules/billing/payments/robokassa/info.ini
@@ -1,4 +1,4 @@
 [info]
 version=3.0
 title=Робокасса
-desc=ROBOKASSA — это сервис, позволяющий продавцам принимать платежи от клиентов с помощью банковских карт, в любой электронной валюте
+desc=Сервис приёма онлайн-платежей, онлайн-касса по 54-ФЗ
