--- a/engine/modules/billing/plugins/fixednews/info.ini
+++ b/engine/modules/billing/plugins/fixednews/info.ini
@@ -1,5 +1,6 @@
 [info]
 author=mr_Evgen
+link=https://github.com/evgeny-tc/dle-billing-module
 version=2.1
 title=Платная фиксация новостей
-desc=Настройка цен фиксации новостей в различных категориях
+desc=Оплата фиксации новости в списке, платная публикация на главной, поднятие в общем списке
