--- a/engine/modules/billing/plugins/paygroups/info.ini
+++ b/engine/modules/billing/plugins/paygroups/info.ini
@@ -1,5 +1,6 @@
 [info]
 author=mr_Evgen
+link=https://github.com/evgeny-tc/dle-billing-module
 version=2.2
 title=Платный переход в группу
-desc=Управление плагином платного переходами пользователей между группами
+desc=Конструктор платного перехода между группами
