--- a/engine/modules/billing/plugins/referrals/info.ini
+++ b/engine/modules/billing/plugins/referrals/info.ini
@@ -2,4 +2,4 @@
 author=mr_Evgen
 version=3.1
 title=Реферальная программа
-desc=Просмотр списка приглашенных пользователей, настройка плагина
+desc=Просмотр списка приглашенных пользователей, конструктор партнерский отчислений
