--- a/engine/modules/billing/payments/yoomoney/info.ini
+++ b/engine/modules/billing/payments/yoomoney/info.ini
@@ -1,4 +1,4 @@
 ﻿[info]
 version=2.0
 title=ЮMoney
-desc=ЮMoney — это по-прежнему ваши деньги
+desc=ЮMoney — сервис электронных платежей, входит в экосистему Сбера
