--- a/engine/modules/billing/plugins/forms/info.ini
+++ b/engine/modules/billing/plugins/forms/info.ini
@@ -1,6 +1,6 @@
 [info]
 author=mr_Evgen
 link=https://github.com/evgeny-tc/dle-billing-module
-version=1.1
+version=2.0
 title=Формы
-desc=Просмотр собранных данных, добавление новых форм
+desc=Управление формами заказов, просмотр собранных данных
