--- a/engine/modules/billing/payments/freekassa/info.ini
+++ b/engine/modules/billing/payments/freekassa/info.ini
@@ -1,4 +1,4 @@
 ﻿[info]
-version=1.4
-title=Free-Kassa
-desc=Простая система подключения онлайн-платежей для ваших интернет проектов
+version=2.0
+title=freekassa.com
+desc=Удобный инструмент приема платежей для интернет-магазинов — мультивалютную кассу.
