--- a/engine/modules/billing/install/_template_/billing/plugins/forms/booking/info.ini
+++ b/engine/modules/billing/install/_template_/billing/plugins/forms/booking/info.ini
@@ -8,7 +8,6 @@ guests = required,int,min:1,max:5
 hotel = text
 fio = text
 agree = required
-site = text
 date = datetime
 email = text,required
 phone = text,required
@@ -25,3 +24,9 @@ guests=Гостей
 date=Заезд
 email=Email
 phone=Телефон
+
+; Названия остальных полей (для popup окна)
+[columns_names]
+days = Дней
+agree = Согласие
+comment = Пожелания
