--- a/engine/modules/billing/install/_template_/billing/plugins/forms/rent/info.ini
+++ b/engine/modules/billing/install/_template_/billing/plugins/forms/rent/info.ini
@@ -13,7 +13,7 @@ agree = text,required
 ; Дополнительные параметры, которые не должны быть изменены
 [params_not_change]
 
-; Вывести поля в отдельные колонки админпанели
+; Вывести поля в отдельные колонки админ.панели
 [columns]
 fio=Имя
 email=Email
@@ -21,3 +21,6 @@ select=Самокат
 date = Дата
 hours = Часов
 
+; Названия остальных полей (для popup окна)
+[columns_names]
+agree = Согласие
