--- a/engine/modules/billing/payments/test/info.ini
+++ b/engine/modules/billing/payments/test/info.ini
@@ -1,4 +1,4 @@
 ﻿[info]
 version=1.0
-title=Тестовая платежная система
-desc=В production - обязательно <b>отключите</b>
+title=Тестовая
+desc=На production - обязательно <b>отключите</b>
